--- a/src/views/ProductListing/ProductListing.scss
+++ b/src/views/ProductListing/ProductListing.scss
@@ -73,7 +73,7 @@
 
             .listing-card {
                 border-radius: 8px;
-                height: 300px;
+                height: 305px;
                 width: 300px;
                 flex-shrink: 0;
                 background-color: #f0f0f0;
